--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 
     <div class="container">
         <div class="game">
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
-            <button class="class">X</button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
         </div>
     </div>
+    <button id="reset">Re-Set Button</button>
     </main>
     
     <script src="app.js"></script>
