--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
+    <div class="msg-container">
+        <p id="msg"></p>
+        <button id="newgame">New Game Button</button>
+    </div>
     <main>
         <h1>Tic Tac Toe </h1>
 
