--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
-    <div class="msg-container">
-        <p id="msg"></p>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
         <button id="newgame">New Game Button</button>
     </div>
     <main>
